Changed trending projects to suggested projects

--- a/projects/templates/projects/feeds.html
+++ b/projects/templates/projects/feeds.html
@@ -236,7 +236,7 @@
 
     <!-- 🔹 Recommended Projects (Fully Separate Block) -->
     <div class="recommended-projects-block">
-        <h3>Trending Projects 🚀</h3>
+        <h3>Suggested Projects 🚀</h3>
         <hr>
         {% if recommended_projects %}
             {% for project in recommended_projects %}
