--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -49,6 +49,14 @@
                     <i class="fa fa-home"></i>
                     <span>Home</span>
                 </a>
+                <a href="{% url 'projects' %}">
+                    <i class="fa fa-folder"></i>
+                    <span>Projects</span>
+                </a>
+                <a href="{% url 'training' %}">
+                    <i class="fa fa-chalkboard-teacher"></i>
+                    <span>Training</span>
+                </a>
                 <a href="{% url 'network' %}">
                     <i class="fa fa-users"></i>
                     <span>Network</span>
