--- a/projects/templates/projects/register.html
+++ b/projects/templates/projects/register.html
@@ -45,6 +45,16 @@
                     <label for="email">Email: <span class="astrix-required">*</span></label>
                     {{ form.email }}
                 </div>
+                <div class="form-group custom-checkbox">
+                    <label for="id_cair_hackathon">
+                        <input type="checkbox" name="cair_hackathon" id="id_cair_hackathon"
+                               {% if form.cair_hackathon.value %}checked{% endif %}>
+                        Are you registering for the CAIR Hackathon?
+                    </label>
+                </div>
+                
+                
+                
             </div>
 
             <!-- Step 2 -->
@@ -69,15 +79,15 @@
             <div class="step" id="step-3" {% if current_step != 3 %}style="display:none;"{% endif %}>
                 <div class="form-grid">
                     <div class="form-group">
-                        <label for="linkedin">LinkedIn (Optional): <span class="astrix-required">*</span></label>
+                        <label for="linkedin">LinkedIn (Optional): <span class="astrix-required"></span></label>
                         {{ form.linkedin }}
                     </div>
                     <div class="form-group">
-                        <label for="github">GitHub (Optional): <span class="astrix-required">*</span></label>
+                        <label for="github">GitHub (Optional): <span class="astrix-required"></span></label>
                         {{ form.github }}
                     </div>
                     <div class="form-group">
-                        <label for="bio">Bio : <span class="astrix-required">*</span></label>
+                        <label for="bio">Bio : <span class="astrix-required"></span></label>
                         {{ form.bio }}
                     </div>
                     <div class="form-group">
