--- a/projects/templates/projects/network.html
+++ b/projects/templates/projects/network.html
@@ -56,7 +56,7 @@
 
     <!-- Other Users Section -->
     <div class="others-section">
-        <h3>Other Users</h3>
+        <h3>CAIR Hackathon Participants</h3>
         <div class="network-group">
             {% for group in groups %}
                 {% for user in group %}
