--- a/projects/templates/projects/network.html
+++ b/projects/templates/projects/network.html
@@ -45,7 +45,7 @@
                         <p class="network-user-concentration">{{ user.userprofile.concentration|default_if_none:"Not available" }}</p>
                     </div>
                         {% if user.userprofile.cair_hackathon %}
-        <div class="cair-badge">CAIR Hackathon</div>
+        <div class="cair-badge">CAIR Hacks</div>
     {% endif %}
 
                 </div>
@@ -75,7 +75,7 @@
                             <p class="network-user-concentration">{{ user.userprofile.concentration|default_if_none:"Not available" }}</p>
                         </div>
                         {% if user.userprofile.cair_hackathon %}
-    <div class="cair-badge">CAIR Hackathon</div>
+    <div class="cair-badge">CAIR Hacks</div>
 {% endif %}
 
                     </div>
