--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -186,6 +186,7 @@
 
 
     {% block footer %}
+    {% if not hide_footer %}
     <!-- Footer -->
     <footer class="modern-footer">
         <div class="footer-container">
@@ -234,7 +235,7 @@
       </footer>
       
 
-    
+    {% endif %}
     {% endblock %}
     <style>
 
